001-multi-team-demo/cluster-ops/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: asm-ingress
  labels:
    istio-injection: enabled
    #istio.io/rev: asm-managed-rapid
