001-multi-team-demo/cluster-ops/gateways.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: 
  name: ingress-gateway
  namespace: istio-system
spec: 
  selector:
    istio: ingressgateway
  servers: 
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - team1.gke-at-scale.com
    - team1.gke-at-scale.com
    - store.gke-at-scale.com
